...
            ),
          }}
        />
        <Tabs.Screen
          name="jobs"
          options={{
            title: "Jobs",
            tabBarAccessibilityLabel: "Jobs tab",
            tabBarIcon: ({ color }: { color: string }) => (
              <IconSymbol size={28} name="briefcase.fill" color={color} />
            ),
          }}
        />
...
